# Sgl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.txt  emscripten-buildcommand.txt  premake5.lua  test.html  test.js  test.wasm
Nemu/include/Nemu/: CPU.h  Joypad.h  NESInput.h  NESInstance.h  PPU.h  ROMLayout.h  StatusRegister.h  System.h
Nemu/include/Nemu/Mapper/: CPUMapper.h  MMC1Mapper.h  MMC3Mapper.h  NROM128Mapper.h  NROM256Mapper.h  PPUMapper.h  UxROMMapper.h
Nemu/src/: Main.cpp
Sandbox/: 3DTest.cpp  CMakeLists.txt  DropTest.cpp  GLTest.cpp  MouseTest.cpp  NESApp.cpp  Sample.cpp  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  Snake3D.cpp  Snake3D.h  TextureTest.cpp
Sandbox/src/: Sandbox.cpp
Sgl/: CMakeLists.txt  Sgl.vcxproj  Sgl.vcxproj.filters
Sgl/glad/: glad.c
Sgl/include/: Sgl.h
Sgl/include/Sgl/: Application.h  BatchRenderer.h  Camera.h  Camera2D.h  Common.h  Entrypoint.h  ForwardRenderer.h  GenericInput.h  GenericWindow.h  IndexBuffer.h  Input.h  Layer.h  LayerStack.h  Light.h  Log.h  Material.h  Mesh.h  Model.h  OpenGL.h  Renderable2D.h  Sgl.h  Sgl2D.h  Shader.h  ShaderUniform.h  Texture.h  Transform.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
Sgl/include/Sgl/Events/: ApplicationEvent.h  Event.h  EventQueue.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Sgl/include/Sgl/Graphics/: BatchRenderer.h  BatchRendererGLES2.h  Camera.h  ForwardRenderer.h  Light.h  Material.h  Mesh.h  Model.h  Renderable2D.h  Renderer2D.h  Texture.h  Texture2D.h  TextureStorage.h  Transform.h
Sgl/include/Sgl/Platform/Core/: BatchRendererCore.h  Renderer2DCore.h  Renderer2D_Core.h
Sgl/include/Sgl/Platform/GLES2/: BatchRendererGLES2.h  Renderer2DES2.h
Sgl/include/glad/: glad.h
Sgl/libs/Glad/src/: glad.c
Sgl/src/: Application.cpp  EventQueue.cpp  GenericInput.cpp  GenericWindow.cpp  IndexBuffer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Sgl.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
Sgl/src/Graphics/: BatchRenderer.cpp  BatchRendererGLES2.cpp  ForwardRenderer.cpp  Material.cpp  Mesh.cpp  Texture.cpp  Texture2D.cpp  TextureStorage.cpp
Sgl/src/Platform/Core/: BatchRendererCore.cpp  Renderer2DCore.cpp  Renderer2D_Core.cpp
Sgl/src/Platform/GLES2/: BatchRendererGLES2.cpp  Renderer2DES2.cpp
emscripten/: index.js  index.wasm  index.wasm.map  layout.html  snake.js  snake.wasm  snake.wasm.map
emscripten/droptest/: index.js  index.wasm  index.wasm.map
emscripten/mousetest/: index.js  index.wasm  index.wasm.map
emscripten/nemu/: index.html  index.js  index.wasm  index.wasm.map
emscripten/texture/: index.js  index.wasm  index.wasm.map
examples/: CMakeLists.txt  ECS.cpp
include/: Sgl.h
include/Sgl/: Application.h  BaseInput.h  BaseWindow.h  Common.h  Entrypoint.h  GLTypes.h  GenericWindow.h  ImGuiLayer.h  IndexBuffer.h  Input.h  Layer.h  LayerStack.h  Log.h  OpenGL.h  Shader.h  ShaderUniform.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
include/Sgl/Events/: ApplicationEvent.h  Event.h  EventQueue.h  JoystickCodes.h  JoystickEvent.h  KeyEvent.h  MouseEvent.h
include/Sgl/Graphics/: BatchRenderer.h  Camera.h  Camera2D.h  Framebuffer2D.h  Group.h  Light.h  Material.h  Mesh.h  Renderable2D.h  Renderer2D.h  Sprite.h  Texture2D.h  Transform.h
include/Sgl/ImGui/: ImGuiLayer.h
include/Sgl/Platform/Core/: Renderer2D_Core.h
include/Sgl/Platform/GLES2/: Renderer2D_ES2.h
include/Sgl/Platform/Web/: WebWindow.h
include/Sgl/Shaders/: GreyScale.gles3.shader  GreyScale.shader  Renderer2D.gles.shader  Renderer2D.gles3.shader  Renderer2D.shader  Simple2D.gles.shader  Simple2D.gles3.shader  Simple2D.shader
res/shaders/: 2D.gles.shader  2D.gles3.shader  2D.shader  GLTest.gles.shader  GLTest.shader  Lamp.gles.shader  Lamp.shader  Light.gles.shader  Light.shader  Simple.shader  Texture.shader
src/: Application.cpp  BaseInput.cpp  BaseWindow.cpp  CMakeLists.txt  EventQueue.cpp  GenericInput.cpp  GenericWindow.cpp  ImGuiLayer.cpp  ImGuiRenderer.cpp  IndexBuffer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Graphics/: BatchRenderer.cpp  Camera2D.cpp  ForwardRenderer.cpp  FrameBuffer2D.cpp  Group.cpp  Material.cpp  Mesh.cpp  Renderable2D.cpp  Renderer2D.cpp  Sprite.cpp  Texture2D.cpp  TileSet.h
src/ImGui/: ImGuiLayer.cpp  ImGuiRenderer.cpp
src/Platform/Core/: Renderer2D_Core.cpp
src/Platform/GLES2/: Renderer2D_ES2.cpp
src/Platform/Web/: WebWindow.cpp
test/: CMakeLists.txt  DropTest.cpp  MouseTest.cpp  NESKeys.h  TextureTest.cpp
